# kaggle-optiver-trading-at-the-close

./: .gitignore  README.md  history.csv  history.txt  pyproject.toml
notebooks/: 001_data_understanding.ipynb  002_index_wap.ipynb  003_change_objective.ipynb  eda.ipynb  tuned-lgbm-best-public-score.ipynb
paperspace/: restart.sh  setup.sh
run/: inference.py  train.py
run/conf/: inference.yaml  train.yaml
run/conf/dir/: kaggle.yaml  local.yaml  paperspace.yaml
src/: cpcv.py  processing.py  processing_v1.py  processing_v2.py
tools/: upload_model.py
